package de.unistuttgart.stayinsync.pollingnode.rabbitmq;

public class SyncNodeMessager {
}
