package de.unistuttgart.stayinsync.pollingnode.service;

public class FilterDataService {
}
