@startuml
'https://plantuml.com/class-diagram
package pollingnode{


    package ressource{
        class RestRessource{
            'Attributes'
            + Map<ApiAddress, HttpRequest>
            'Functions'
            +getData(apiAddress: String)
        }
    }

    package rabbitmq{
        class CoreManagementMessager{

        }

        class SyncNodeMessager{

        }
    }

     package entities{
                class FilterConfiguration{

                }

                class PollingJob{
                    'Attributes'
                    + filteredData: Map<String, Object>
                    + active: boolean
                    'Functions'

                }

                class SyncJob{
                    'Attributes'
                    + syncRules: String
                    + sourceSystems: List<RestAddress>
                    'Functions'

                }

               class ApiAddress{
                    'Attributes'
                    + apiAddress: String
                    'Functions'
                    + getString()
               }
                PollingJob --> "0..*" ApiAddress: contains
                PollingJob  <--> "1" SyncJob: contains
                PollingJob  --> "1" FilterConfiguration: contains

            }

    package configuration{





        class FilterConfigurator{
            'Attributes'
            +
        }

        class PollingJobConfigurator{
            'Attributes'
            'Functions'
            + createPollingJob()
            + editPollingJob()
            + deletePollingJob()
        }

        PollingJobConfigurator --> PollingJob: configures
        PollingJobConfigurator --> FilterConfigurator: uses
        PollingJobConfigurator --> "0..*"SyncJob: supportedSyncJobs

    }


    package service{
            class FilterDataService{

            }

            class PollingJobExecutionService{
                'Attributes'
                + jsonStorage: Map<ApiAddress, Json>
                'Functions'

            }
            PollingJobExecutionService --> RestRessource: collectsData
            PollingJobExecutionService --> FilterDataService: uses
            PollingJobExecutionService "1" <--  PollingJobConfigurator: accessPollingJobs

        }

    package management{
        class PollingNodeManagement{
            'Attributes'

            'Functions'

        }

        PollingNodeManagement --> PollingJobExecutionService: times
        PollingNodeManagement --> PollingJobConfigurator: controlls
        PollingNodeManagement --> CoreManagementMessager: controlled by
    }






}
@enduml